src/test/deca/syntax/valid/sansObjet/readInt.deca
{
    int y = readInt();
    println(y);
}
