src/test/deca/syntax/invalid/sansObjet/IfExpressionFalse11.deca
{
    int x=2;
    if []{
        println("x=2");
    }
}